<resources>
    <string name="app_name">TeamPeanut_HarvestTiming_2023</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_jdsign_in">JDSignIn</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log in/Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email_phone_number_prompt">Email</string>
    <string name="signinTExt">Sign In</string>
    <string name="title_activity_inputdatastart">inputdatastart</string>
    <string name="cropStateText">Current Crop State</string>
    <string name="updateStateText">Update Crop Status</string>
    <string name="weatherCheckText">Weather Check</string>
    <string name="universalMenuButtonName">Menu</string>
    <string name="Menu_Fragment_Label">Menu Fragment</string>
    <string name="crop_placeholder">Crop</string>
    <string name="crop_select_ph">Select Crop</string>
    <string name="variety_selection_ph">Variety Selection</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_an_account">Create an account</string>
    <string name="fertilizer">Fertilizer</string>
    <string name="farmaddy">Farm Address</string>
    <string name="crop">Crop</string>
    <string name="crop_nvariety">Crop\nVariety</string>
    <string name="soil_ntype">Soil\nType</string>
    <string name="addy">Address</string>
    <string name="crop_health_hint">Input Health Here</string>
    <string name="moisture_hint">Input Moisture Here</string>
    <string name="soil_temp_hint">Input Temp Here</string>
    <string name="soil_temp_label_text">Soil Temp</string>
    <string name="moisture_label_text">Moisture</string>
    <string name="crop_health_label_text">Crop Health</string>
    <string name="crop_image_description">Displays the image of the crop.</string>
    <string name="input_crop_button_text">Input</string>
    <string name="soil_temp">soil_t</string>
    <string name="check_crop_status">Check Crop Status</string>
    <string name="remaining_days_until_harvest">Remaining days until harvest</string>
    <string-array name="crops_array">
        <item>Corn</item>
        <item>Soybean</item>
    </string-array>
    <string-array name="cVariety_array">
        <item>3404V2P</item>
        <item>3753V2P</item>
        <item>3762D2</item>
        <item>3854GH</item>
        <item>4001V2P</item>
        <item>4026RR</item>
        <item>4034VR</item>
        <item>4117AM</item>
        <item>4234D2</item>
        <item>4362SX</item>
        <item>4387V2P</item>
        <item>4411RR</item>
        <item>4411V2P</item>
        <item>4421AM</item>
        <item>4421Q</item>
        <item>4501V2P</item>
        <item>4636GH</item>
        <item>4636RR</item>
        <item>4672AM</item>
        <item>4672Q</item>
        <item>4797V2P</item>
        <item>4844SX</item>
        <item>4844V2P</item>
        <item>4867D2</item>
        <item>4898SXP</item>
        <item>4905VR</item>
        <item>5015BZ</item>
        <item>5077GH</item>
        <item>5077RR</item>
        <item>5077V2P</item>
        <item>5095D1</item>
        <item>5145AM</item>
        <item>5145Q</item>
        <item>5202AM</item>
        <item>52F3GH</item>
        <item>5332AM</item>
        <item>5379D2</item>
        <item>5393V2P</item>
        <item>5413Q</item>
        <item>5493SX</item>
        <item>54F4GH</item>
        <item>5140RR</item>
        <item>5507AM</item>
        <item>5507Q</item>
        <item>5583D1</item>
        <item>55E4GH</item>
        <item>5625AM</item>
        <item>5647Q</item>
        <item>5676SXP</item>
        <item>5699V2P</item>
        <item>5794V2P</item>
        <item>5818BR</item>
        <item>5829A4</item>
        <item>5864AM</item>
        <item>5866AM</item>
        <item>5899SX</item>
        <item>5899V2P</item>
        <item>5909AA</item>
        <item>5909GH</item>
        <item>5909AM</item>
        <item>5909Q</item>
        <item>5955WX</item>
        <item>5963SX</item>
        <item>6038VR</item>
        <item>6041Q</item>
        <item>6046RR</item>
        <item>6064AM</item>
        <item>6081AM</item>
        <item>6112V2P</item>
        <item>6127A3</item>
        <item>6128V2P</item>
        <item>6152D1</item>
        <item>6159SX</item>
        <item>6204WX</item>
        <item>6235D1</item>
        <item>6241Q</item>
        <item>6256AM</item>
        <item>6256Q</item>
        <item>6274RR</item>
        <item>6278SX</item>
        <item>6282AM</item>
        <item>6288D2</item>
        <item>6296AM</item>
        <item>62E2GH</item>
        <item>6337WX</item>
        <item>6368V2P</item>
        <item>6374V2P</item>
        <item>6381AM</item>
        <item>6414V2P</item>
        <item>6414V2N</item>
        <item>6438BZ</item>
        <item>6442AM</item>
        <item>6457SX</item>
        <item>6481AM</item>
        <item>6485SX</item>
        <item>6506VZ</item>
        <item>6551GH</item>
        <item>6557V2P</item>
        <item>6557ZZ</item>
        <item>6585TCV2P</item>
        <item>6589RR</item>
        <item>6948BR</item>
        <item>6674TCV2P</item>
        <item>6674TCV2N</item>
        <item>6689SX</item>
        <item>6743AML</item>
        <item>6774V2P</item>
        <item>6803V2P</item>
        <item>6803V2N</item>
        <item>6886VR</item>
        <item>6991V2P</item>
        <item>6991V2N</item>
    </string-array>
    <string-array name="sbVariety_array">
        <item>0240E3</item>
        <item>0430E3</item>
        <item>0630E3</item>
        <item>0775XF</item>
        <item>0830E3</item>
        <item>1007XF</item>
        <item>1040E3</item>
        <item>1130E3</item>
        <item>1225XF</item>
        <item>1440E3</item>
        <item>1447XF</item>
        <item>152AA</item>
        <item>1630E3</item>
        <item>1665XF</item>
        <item>1830E3</item>
        <item>1887XF</item>
        <item>190AA</item>
        <item>190ZZ</item>
        <item>2007XF</item>
        <item>2030E3</item>
        <item>2227XF</item>
        <item>2240E3</item>
        <item>2333XF</item>
        <item>240AA</item>
        <item>240GH</item>
        <item>240ZZ</item>
        <item>2420E3</item>
        <item>2430E3</item>
        <item>2555XF</item>
        <item>2630E3</item>
        <item>2663XF</item>
        <item>281AA</item>
        <item>281GH</item>
        <item>281ZZ</item>
        <item>2830E3</item>
        <item>2887XF</item>
        <item>291AA</item>
        <item>291GH</item>
        <item>291ZZ</item>
        <item>2997XF</item>
        <item>3030E3</item>
        <item>310AA</item>
        <item>310GH</item>
        <item>310ZZ</item>
        <item>3117XF</item>
        <item>3140E3</item>
        <item>3227XF</item>
        <item>3230E3</item>
        <item>3300E3</item>
        <item>3337XF</item>
        <item>3340E3</item>
        <item>340AA</item>
        <item>340GH</item>
        <item>340ZZ</item>
        <item>3510E3</item>
        <item>3530E3</item>
        <item>3555XF</item>
        <item>360AA</item>
        <item>360GH</item>
        <item>360ZZ</item>
        <item>3663XF</item>
        <item>370AA</item>
        <item>370ZZ</item>
        <item>3730E3</item>
        <item>3830E3</item>
        <item>3887XF</item>
        <item>390AA</item>
        <item>390GH</item>
        <item>390ZZ</item>
        <item>3997XF</item>
        <item>4030E3</item>
        <item>4113XF</item>
        <item>4119X2</item>
        <item>4140E3</item>
        <item>4227XF</item>
        <item>422AA</item>
        <item>422GH</item>
        <item>422ZZ</item>
        <item>4320E3</item>
        <item>4337XF</item>
        <item>4443XF</item>
        <item>4449X2</item>
        <item>4540E3</item>
        <item>4553XF</item>
        <item>462AA</item>
        <item>462ZZ</item>
        <item>4630E3</item>
        <item>4777XF</item>
        <item>4830E3</item>
        <item>4885XF</item>
        <item>4887XF</item>
        <item>4991X2</item>
        <item>5005XF</item>
        <item>5040E3</item>
        <item>5117XF</item>

    </string-array>
    <string-array name="corn_maturity">
    <item>84</item>
    <item>87</item>
    <item>87</item>
    <item>88</item>
    <item>90</item>
    <item>90</item>
    <item>90</item>
    <item>91</item>
    <item>92</item>
    <item>93</item>
    <item>93</item>
    <item>94</item>
    <item>94</item>
    <item>94</item>
    <item>94</item>
    <item>95</item>
    <item>96</item>
    <item>96</item>
    <item>96</item>
    <item>96</item>
    <item>97</item>
    <item>98</item>
    <item>98</item>
    <item>98</item>
    <item>98</item>
    <item>99</item>
    <item>100</item>
    <item>100</item>
    <item>100</item>
    <item>100</item>
    <item>100</item>
    <item>101</item>
    <item>101</item>
    <item>102</item>
    <item>102</item>
    <item>103</item>
    <item>103</item>
    <item>103</item>
    <item>104</item>
    <item>104</item>
    <item>104</item>
    <item>105</item>
    <item>105</item>
    <item>105</item>
    <item>105</item>
    <item>105</item>
    <item>106</item>
    <item>106</item>
    <item>106</item>
    <item>106</item>
    <item>107</item>
    <item>108</item>
    <item>108</item>
    <item>108</item>
    <item>108</item>
    <item>108</item>
    <item>108</item>
    <item>109</item>
    <item>109</item>
    <item>109</item>
    <item>109</item>
    <item>109</item>
    <item>109</item>
    <item>110</item>
    <item>110</item>
    <item>110</item>
    <item>110</item>
    <item>110</item>
    <item>111</item>
    <item>111</item>
    <item>111</item>
    <item>111</item>
    <item>111</item>
    <item>112</item>
    <item>112</item>
    <item>112</item>
    <item>112</item>
    <item>112</item>
    <item>112</item>
    <item>112</item>
    <item>112</item>
    <item>112</item>
    <item>112</item>
    <item>112</item>
    <item>113</item>
    <item>113</item>
    <item>113</item>
    <item>113</item>
    <item>114</item>
    <item>114</item>
    <item>114</item>
    <item>114</item>
    <item>114</item>
    <item>114</item>
    <item>114</item>
    <item>115</item>
    <item>115</item>
    <item>115</item>
    <item>115</item>
    <item>115</item>
    <item>115</item>
    <item>115</item>
    <item>116</item>
    <item>116</item>
    <item>116</item>
    <item>117</item>
    <item>117</item>
    <item>118</item>
    <item>118</item>
    <item>118</item>
    <item>119</item>
    <item>119</item>

</string-array>
</resources>