<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/CropHealthText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/crop_health_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/CropHealthLabel"
        app:layout_constraintStart_toStartOf="@+id/MoistureText"
        tools:ignore="Autofill,TextContrastCheck" />

    <EditText
        android:id="@+id/MoistureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/moisture_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/MoistureLabel"
        app:layout_constraintStart_toStartOf="@+id/SoilTempText"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button
        android:id="@+id/BackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/universalMenuButtonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SoilTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/soil_temp_hint"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/SoilTempLabel"
        app:layout_constraintStart_toEndOf="@+id/SoilTempLabel"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/SoilTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:text="@string/soil_temp_label_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MoistureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/moisture_label_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SoilTempLabel" />

    <TextView
        android:id="@+id/CropHealthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/crop_health_label_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoistureLabel" />

</androidx.constraintlayout.widget.ConstraintLayout>