<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InputCropStateActivity">

    <EditText
        android:id="@+id/MoistureText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/moisture_hint"
        android:inputType="textShortMessage"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/MoistureLabel"
        app:layout_constraintStart_toStartOf="@+id/SoilTempText"
        tools:ignore="Autofill,TextContrastCheck" />

    <Button

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/universalMenuButtonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/SoilTempText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:hint="@string/soil_temp_hint"
        android:inputType="textShortMessage"
        android:minHeight="48dp"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/SoilTempLabel"
        app:layout_constraintStart_toEndOf="@+id/SoilTempLabel"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/SoilTempLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="120dp"
        android:text="@string/soil_temp_label_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/MoistureLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:text="@string/moisture_label_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SoilTempLabel" />

    <TextView
        android:id="@+id/CropHealthLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/crop_health_label_text"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoistureLabel" />

    <Button
        android:id="@+id/InputCropButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/input_crop_button_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/SelectImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select Image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="287dp" />

    <ImageView
        android:id="@+id/CropImage"
        android:layout_width="200sp"
        android:layout_height="300sp"
        android:background="#D0D0D0"
        android:contentDescription="@string/crop_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/InputCropButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SelectImageButton"
        app:srcCompat="@drawable/common_full_open_on_phone" />

</androidx.constraintlayout.widget.ConstraintLayout>